--- a/client/views/footer.twig
+++ b/client/views/footer.twig
@@ -3,7 +3,8 @@
 		<div class="row">
 			<div class="col l6 s12">
 				<h5 class="white-text">Contenu</h5>
-				<p class="grey-text text-lighten-4">Ce site permet la visualition des sentiments des supporters du SMC sur les réseaux sociaux Facebook et Twitter. On peut aussi voir l'évolution selon les différents match du club.</p>
+				<p class="grey-text text-lighten-4">Ce site permet la visualition des sentiments des supporters du SMC sur les réseaux sociaux Facebook et Twitter. On peut aussi voir l'évolution selon les différents match du club.
+				Projet proposé par Marc Spaniol dans le module Document Numérique Avancé</p>
 			</div>
 			<div class="col l4 offset-l2 s12">
 				<h5 class="white-text">Liens</h5>
@@ -16,7 +17,7 @@
 	</div>
 	<div class="footer-copyright">
 		<div class="container">
-			© 2016 Université de Caen Basse Normandie
+			© 2016 Université de Caen Basse Normandie Master 2 DNR2I
 			<a class="grey-text text-lighten-4 right" href="http://www.github.com/plabadille">Pierre Labadille</a>
 			<a class="grey-text text-lighten-4 right" href="http://www.github.com/lcouellan">Lénaïc Couëllan</a>
 		</div>
