--- a/client/views/header.twig
+++ b/client/views/header.twig
@@ -1,6 +1,6 @@
 <nav>
 	<div class="nav-wrapper">
-		<a href="#!" class="brand-logo">Analyse des sentiments</a>
+		<a href="#!" class="brand-logo">Analyseur des sentiments sur les réseaux sociaux (sur le SM Caen)</a>
 		<ul class="right hide-on-med-and-down">
 			<li><a href="/">Accueil</a></li>
 			<li><a href="/graph">Sentiments par match</a></li>
